--- a/my_app/templates/about.html
+++ b/my_app/templates/about.html
@@ -1,7 +1,7 @@
 {% include "header.html" %}
 
   <!-- Page Header -->
-  <header class="masthead" style="background-image: url({{ url_for('static', filename='img/about-bg.jpg')}})">
+  <header class="masthead" style="background-image: url({{ url_for('static', filename='img/mael-balland-yZI3mw9p7oE-unsplash.jpg')}})">
     <div class="overlay"></div>
     <div class="container">
       <div class="row">
@@ -19,9 +19,8 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-8 col-md-10 mx-auto">
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe nostrum ullam eveniet pariatur voluptates odit, fuga atque ea nobis sit soluta odio, adipisci quas excepturi maxime quae totam ducimus consectetur?</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius praesentium recusandae illo eaque architecto error, repellendus iusto reprehenderit, doloribus, minus sunt. Numquam at quae voluptatum in officia voluptas voluptatibus, minus!</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut consequuntur magnam, excepturi aliquid ex itaque esse est vero natus quae optio aperiam soluta voluptatibus corporis atque iste neque sit tempora!</p>
+        <p>I am like this child, on the road of the life, curious, climbing some rocks and exploring different ways, enjoying learning new things.</p>
+        <p>Interested in education, science and computers since my childhood, I have studied all of that. I had to choose a path, so I decided to become a teacher. After a good experience, I wanted to make a new career and become a programmer.</p>
       </div>
     </div>
   </div>
