--- a/my_app/templates/footer.html
+++ b/my_app/templates/footer.html
@@ -29,7 +29,7 @@
               </a>
             </li>
           </ul>
-          <p class="copyright text-muted">Copyright &copy; Your Website 2020</p>
+          <p class="copyright text-muted">Copyright &copy; François H. {{ now }}</p>
         </div>
       </div>
     </div>
