--- a/my_app/templates/index.html
+++ b/my_app/templates/index.html
@@ -1,14 +1,14 @@
 {% include "header.html" %}
 
 <!-- Page Header -->
-<header class="masthead" style="background-image: url('https://images.unsplash.com/photo-1470092306007-055b6797ca72?ixlib=rb-1.2.1&auto=format&fit=crop&w=668&q=80')">
+<header class="masthead" style="background-image: url('https://images.unsplash.com/photo-1464802686167-b939a6910659?ixlib=rb-1.2.1&ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&auto=format&fit=crop&w=1333&q=80')">
     <div class="overlay"></div>
     <div class="container">
         <div class="row">
             <div class="col-lg-8 col-md-10 mx-auto">
                 <div class="site-heading">
-                    <h1>Angela's Blog</h1>
-                    <span class="subheading">A collection of random musings.</span>
+                    <h1>Welcome</h1>
+                    <span class="subheading">To my blog.</span>
                 </div>
             </div>
         </div>
@@ -33,7 +33,7 @@
                     <a href="#">{{post.blogpost_author.name}}</a>
                     on {{post.date}}
 
-                    {% if current_user.is_admin %}
+                    {% if current_user.is_admin and post.blogpost_author.name != 'Admin' %}
                     <a href="{{url_for('delete_post', post_id=post.id) }}">✘</a>
                     {% endif %}
                 </p>
